# rust-graphics

./: .gitignore  .gitmodules  Cargo.toml  LICENSE.md  README.md  claude.md  package.json  rust-toolchain.toml
.cargo/: config.toml
drafts/ball/: Cargo.toml
drafts/ball/shader/: Cargo.toml  vertex.spv
drafts/ball/shader/src/: lib.rs
drafts/ball/src/: geom.rs  main.rs
drafts/columns/shader/: Cargo.toml  ground_frag.spv  ground_vert.spv
drafts/columns/shader/src/: lib.rs
drafts/columns/src/: main.rs
drafts/cube/: Cargo.toml
drafts/cube/shader/: Cargo.toml  fragment.spv  vertex.spv
drafts/cube/shader/src/: lib.rs
drafts/cube/src/: geom.rs  main.rs
drafts/frag_shader/shader/: main.spv
drafts/frag_shader/shader/src/: lib.rs
drafts/frag_shader/src/: main.rs
drafts/instances/shader/src/: lib.rs
drafts/instances/src/: main.rs
drafts/mouse_color/: Cargo.toml
drafts/mouse_color/src/: main.rs
drafts/noise_tests/: Cargo.toml
drafts/noise_tests/shader/: Cargo.toml  hash_shader.spv  manifest.json  simplex_4d_shader.spv  tiling_noise_3d_shader.spv  tiling_noise_shader.spv  tiling_simplex_shader.spv
drafts/noise_tests/shader/src/: lib.rs
drafts/noise_tests/src/: main.rs
drafts/polygons/: Cargo.toml
drafts/polygons/shader/: Cargo.toml  fragment.spv  vertex.spv
drafts/polygons/shader/src/: lib.rs
drafts/polygons/src/: main.rs
drafts/room/: Cargo.toml
drafts/room/shader/: Cargo.toml  ground_frag.spv  ground_vert.spv  manifest.json  wall_pre_render_frag.spv  wall_pre_render_vert.spv  wall_render_frag.spv  wall_render_vert.spv
drafts/room/shader/src/: lib.rs
drafts/room/src/: geom.rs  input_state.rs  main.rs
drafts/shader_image/: Cargo.toml
drafts/shader_image/shader/: Cargo.toml  main_fs.spv  main_vs.spv
drafts/shader_image/shader/src/: lib.rs
drafts/shader_image/src/: main.rs
drafts/strokes/: Cargo.toml
drafts/strokes/shader/: bg_frag.spv  line_frag.spv  line_vert.spv  manifest.json
drafts/strokes/src/: main.rs  painting.rs
drafts/template/: Cargo.toml
drafts/template/shader/src/: lib.rs
drafts/template/src/: main.rs
drafts/textures/: Cargo.toml
drafts/textures/shader/: Cargo.toml  bos_colors.spv  bos_shapes_circle.spv  bos_shapes_circles.spv  bos_shapes_rect.spv  bos_shapes_rounded_rect.spv  bos_shaping_fns.spv  bos_shaping_fns_1.spv  fbm_shader.spv  fbm_shader_frag.spv  hash_test.spv  main.spv  manifest.json  net.spv  noisy_lines_1.spv  noisy_lines_2.spv  noisy_quads.spv  simplex_prefilled.spv  simplex_prefilled_frag.spv  simplex_shader.spv  simplex_shader_frag.spv  tiled_lines.spv  tiled_plates.spv
drafts/textures/shader/src/: lib.rs  utils.rs
drafts/textures/shader/src/book_of_shaders/: colors.rs  mod.rs  shapes.rs  shaping_fns.rs
drafts/textures/shader/src/sketches/: lines.rs  misc.rs  mod.rs  noise.rs  tiles.rs
drafts/textures/src/: main.rs  utils.rs
drafts/textures/tex1_shader/: Cargo.toml
drafts/triangle/: Cargo.toml
drafts/triangle/shader/: Cargo.toml  README.md  fragment.spv
drafts/triangle/shader/src/: lib.rs
drafts/triangle/src/: main.rs
engine/: Cargo.toml
engine/src/: lib.rs  painter.rs  renderer.rs
run-watch/: Cargo.toml
run-watch/src/: main.rs
shared/: Cargo.toml
shared-nostd/: Cargo.toml
shared-nostd/src/: lib.rs  shapes.rs
shared/src/: lib.rs
shared/src/plate_geometry/: implementation_plan.md  mod.rs  plate.rs
sketches/ball/shader/: Cargo.toml
sketches/ball/shader/src/: lib.rs
sketches/ball/src/: geom.rs  main.rs
sketches/columns/: Cargo.toml
sketches/columns/shader/src/: lib.rs
sketches/columns/src/: main.rs
sketches/room/: Cargo.toml
sketches/room/shader/: wall_pre_render_vert.spv
sketches/room/shader/src/: lib.rs
sketches/room/src/: main.rs
sketches/rooms/base/: Cargo.toml
sketches/rooms/base/shader/: Cargo.toml  wall_pre_render_frag.spv  wall_pre_render_vert.spv  wall_render_frag.spv  wall_render_vert.spv
sketches/rooms/base/shader/src/: lib.rs
sketches/rooms/base/src/: geom.rs  main.rs
sketches/rooms/columns/shader/: Cargo.toml  ground_frag.spv
sketches/rooms/columns/shader/src/: lib.rs
sketches/rooms/columns/src/: main.rs
sketches/rooms/grid_ceiling/: Cargo.toml
sketches/rooms/grid_ceiling/shader/: Cargo.toml  wall_pre_render_frag.spv  wall_render_frag.spv
sketches/rooms/grid_ceiling/src/: geom.rs  main.rs
sketches/strokes/: Cargo.toml
sketches/strokes/1/: Cargo.toml
sketches/strokes/1/shader/: Cargo.toml  bg_frag.spv  canvas_frag.spv  line_frag.spv  manifest.json
sketches/strokes/1/shader/src/: lib.rs
sketches/strokes/1/src/: main.rs  painting.rs
sketches/strokes/shader/: Cargo.toml  line_frag.spv  line_vert.spv  main.spv
sketches/strokes/shader/src/: lib.rs
sketches/strokes/src/: main.rs  painting.rs
sketches/template/: Cargo.toml
sketches/template/shader/: Cargo.toml
sketches/template/src/: main.rs
sketches/tests/ball/: Cargo.toml
sketches/tests/ball/src/: geom.rs  main.rs
sketches/tests/bloom/: Cargo.toml  bloom_plan.md
sketches/tests/bloom/shader/: Cargo.toml  composite_fs.spv  downsample_blur_fs.spv  manifest.json  test_scene_fs.spv  threshold_fs.spv  upsample_blur_fs.spv
sketches/tests/bloom/src/: main.rs
sketches/tests/tex_layer/: Cargo.toml
sketches/tests/tex_layer/shader/: Cargo.toml  main.spv
sketches/tests/tex_layer/src/: main.rs
sketches/textures/: Cargo.toml
sketches/textures/1/shader/: Cargo.toml
sketches/textures/1/shader/src/book_of_shaders/: mod.rs  shaping_fns.rs
sketches/textures/1/shader/src/sketches/: lines.rs
sketches/textures/1/src/: main.rs
sketches/textures/lines/: Cargo.toml
sketches/textures/lines/shader/: Cargo.toml
sketches/textures/lines/src/: main.rs
sketches/textures/shader/: Cargo.toml
sketches/textures/shader/src/: lib.rs  utils.rs
sketches/textures/sketches/: Cargo.toml
sketches/textures/sketches/shader/: Cargo.toml
sketches/textures/sketches/src/: main.rs
sketches/textures/src/: main.rs  utils.rs
sketches/textures/tests/: Cargo.toml
sketches/textures/tests/shader/: Cargo.toml
sketches/textures/tests/src/: main.rs
(+54 files in other folders)
