[workspace]
resolver = "2"

members = [
	"drafts/instances",
	"drafts/instances/shader",
	"drafts/triangle",
	"drafts/triangle/shader",
	"drafts/polygons",
	"drafts/polygons/shader",
	"drafts/mouse_color",
	"drafts/shader_image",
	"drafts/shader_image/shader",
	"drafts/ball",
	"drafts/ball/shader",
	"trivalibs",
]

[workspace.package]
edition = "2021"


[workspace.dependencies]
trivalibs = { path = "trivalibs" }
pollster = "0.4.0"
env_logger = "0.8.3"
log = "0.4"
png = "0.17.14"
flume = "0.11.1"
bytemuck = "1.20.0"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
