[workspace]
resolver = "2"

members = ["drafts/*", "drafts/**/shader", "run-watch"]

[workspace.package]
edition = "2021"
rust-version = "1.82" # Prevent Cargo.lock version 4, cargo gpu does not support it yet

[workspace.dependencies]

trivalibs = { path = "trivalibs/crates/trivalibs" }
trivalibs_shaders = { path = "trivalibs/crates/trivalibs_shaders" }
trivalibs_core = { path = "trivalibs/crates/trivalibs_core" }
trivalibs_painter = { path = "trivalibs/crates/trivalibs_painter" }
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
serde_bytes = "0.11"
bytemuck = { version = "1.21", features = ["derive"] }
js-sys = "0.3"
lerp = "0.5"
approx = "0.5.1"
rand = {version = "0.9", features = ["thread_rng"] }
getrandom = { version = "0.3", features = ["wasm_js"] }
glam = { version = "0.30", features = [
	"bytemuck",
	"serde",
	"rand",
	"approx",
] }
winit = "0.30"
wgpu = { version = "24.0", features = ["spirv"] }
spirv-std = { version = "0.9" }
log = "0.4"
env_logger = "0.11"
pollster = "0.4.0"
macro_rules_attribute = "0.2.0"
png = "0.17"
flume = "0.11.1"
notify = "8.0.0"
noise = "0.9.0"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
