[workspace]
resolver = "2"

members = ["sketches/*", "sketches/**/shader", "run-watch", "shared", "shared-nostd"]

[workspace.package]
edition = "2024"

[workspace.metadata.rust-gpu.build]
multimodule = true

[workspace.metadata.rust-gpu.install]
spirv_builder_source = "https://github.com/Rust-GPU/rust-gpu"
spirv_builder_version = "2aa4d4f8a8ba73103501562cfca17b8163e5a887"

[workspace.dependencies]

trivalibs = { path = "trivalibs/crates/trivalibs" }
trivalibs_nostd = { path = "trivalibs/crates/trivalibs_nostd" }
trivalibs_core = { path = "trivalibs/crates/trivalibs_core" }
trivalibs_painter = { path = "trivalibs/crates/trivalibs_painter" }
shared = { path = "shared" }
shared-nostd = { path = "shared-nostd" }
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
serde_bytes = "0.11"
bytemuck = { version = "1.21", features = ["derive"] }
js-sys = "0.3"
lerp = "0.5"
approx = "0.5"
rand = {version = "0.9", features = ["thread_rng"] }
getrandom = { version = "0.3", features = ["wasm_js"] }
glam = { version = "0.30", features = [
	"bytemuck",
	"serde",
	"rand",
	"approx",
] }
winit = "0.30"
wgpu = { version = "26.0", features = ["spirv"] }
spirv-std = { git = "https://github.com/Rust-GPU/rust-gpu", rev = "2aa4d4f8a8ba73103501562cfca17b8163e5a887" }
log = "0.4"
env_logger = "0.11"
pollster = "0.4"
macro_rules_attribute = "0.2"
png = "0.18"
flume = "0.11"
notify = "8.2"
noise = "0.9"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
