[package]
name = "trival_painter"
edition.workspace = true
publish = false

[dependencies]
winit.workspace = true
bytemuck = { workspace = true, features = ["derive"] }
wgpu = { workspace = true, features = ["spirv"] }
glam = { workspace = true, features = ["bytemuck"] }
log.workspace = true
env_logger.workspace = true
pollster.workspace = true
