[package]
name = "draft_polygons"
edition.workspace = true

[dependencies]
wgpu = { workspace = true, features = ["spirv"] }
glam = { workspace = true, features = ["bytemuck"] }
winit.workspace = true
trival_painter.workspace = true
draft_polygons_shader = { path = "./shader" }
bytemuck = { workspace = true, features = ["derive"] }
