[package]
name = "ball_shader"
version = "0.1.0"
edition.workspace = true

[lib]
crate-type = ["rlib", "cdylib"]

# Dependencies for CPU and GPU code
[dependencies]
spirv-std.workspace = true

[package.metadata.rust-gpu.build]
multimodule = true

[package.metadata.rust-gpu.install]
spirv_builder_source = "https://github.com/Rust-GPU/rust-gpu"
spirv_builder_version = "2aa4d4f8a8ba73103501562cfca17b8163e5a887"
