[package]
name = "draft_shader_image_shader"
edition.workspace = true

[lib]
crate-type = ["rlib", "cdylib"]

# Dependencies for CPU and GPU code
[dependencies]
spirv-std = { version = "0.9" }

# dependencies for GPU code
[target.'cfg(target_arch = "spirv")'.dependencies]
glam = { version = "0.29", default-features = false, features = ["libm"] }

# dependencies for CPU code
[target.'cfg(not(target_arch = "spirv"))'.dependencies]
glam = { workspace = true, features = ["bytemuck"] }
