[package]
name = "tex_shader"
version = "0.1.0"
edition.workspace = true

[lib]
crate-type = ["rlib", "cdylib"]

# Dependencies for CPU and GPU code
[dependencies]
spirv-std.workspace = true
trivalibs-nostd.workspace = true

[package.metadata.rust-gpu.build]
output-dir = "./out/"
multimodule = true
